==> nanoframework/nf-interpreter/targets/ESP32/_nanoCLR/System.Device.Pwm/sys_dev_pwm_native_System_Device_Pwm_PwmChannel.cpp <==
#include <sys_dev_pwm_native.h>
#include <targetPAL.h>
#include <Esp32_DeviceMapping.h>
#define GetSpeedMode(timer) (ledc_mode_t)((timer > 3) ? LEDC_LOW_SPEED_MODE : LEDC_HIGH_SPEED_MODE)
#define GetSpeedMode(timer) LEDC_LOW_SPEED_MODE
#define IDF_ERROR(result)                                                                                              \
    if (result != ESP_OK)                                                                                              \
    {                                                                                                                  \
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);                                                                \
    }

HRESULT Library_sys_dev_pwm_native_System_Device_Pwm_PwmChannel::NativeSetDesiredFrequency___VOID__I4(
    CLR_RT_StackFrame &stack)
{
    int32_t timerId;
    int32_t desiredFrequency;
    int32_t optimumDutyResolution;
    uint32_t precision;
    uint64_t divParam;
    esp_err_t result;

    ledc_timer_t timer;
    ledc_mode_t mode;
    ledc_timer_bit_t duty_res;
    ledc_timer_config_t timer_conf;

    NANOCLR_HEADER();

    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Retrieves the needed parameters from private class properties ( 0 - 7 )
    timerId = pThis[FIELD___pwmTimer].NumericByRef().s4;
    desiredFrequency = stack.Arg1().NumericByRef().s4;

    // parameter check
    if (desiredFrequency < 0)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
    }

    timer = (ledc_timer_t)(timerId & 0x03);

#if SOC_LEDC_SUPPORT_HS_MODE
    mode = (timerId <= 4) ? LEDC_HIGH_SPEED_MODE : LEDC_LOW_SPEED_MODE;
#else
    mode = LEDC_LOW_SPEED_MODE;
#endif

    // Work out the optimal duty resolution based on current frequency, default to 1 if not found
    // Working from 15 bit duty resolution down until we have a valid divisor
    optimumDutyResolution = 1;

    for (int dutyResolution = 15; dutyResolution > 0; dutyResolution--)
    {
        precision = (0x1 << dutyResolution); // 2**depth

        divParam = ((uint64_t)LEDC_APB_CLK_HZ << 8) / desiredFrequency / precision;

        if (divParam > 256)
        {
            optimumDutyResolution = dutyResolution;
            break;
        }
    }

    duty_res = (ledc_timer_bit_t)optimumDutyResolution;

    // Save resolution for working out values for percent duty cycle
    PwmController_Timer_resolution[timerId] = (0x1 << optimumDutyResolution);

    timer_conf = {mode, duty_res, timer, (uint32_t)desiredFrequency, LEDC_AUTO_CLK};

    result = ledc_timer_config(&timer_conf);
    if (result != ESP_OK)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
    }

    // store the frequency
    pThis[FIELD___frequency].NumericByRef().s4 = desiredFrequency;

    NANOCLR_NOCLEANUP();
}

HRESULT Library_sys_dev_pwm_native_System_Device_Pwm_PwmChannel::NativeSetActiveDutyCyclePercentage___VOID__R8(
    CLR_RT_StackFrame &stack)
{
    int32_t timerId;
    int32_t pinNumber;
    uint32_t dutyCycle;

    ledc_channel_t channel;

    PwmPulsePolarity polarity;
    ledc_mode_t speed_mode;

    NANOCLR_HEADER();

    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Retrieves the needed parameters from private class properties or method parameters
    timerId = pThis[FIELD___pwmTimer].NumericByRef().s4;
    pinNumber = pThis[FIELD___pinNumber].NumericByRef().s4;
    polarity = (PwmPulsePolarity)(pThis[FIELD___polarity].NumericByRef().u4);

    // parameter check
    if (stack.Arg1().NumericByRef().r8 < 0 || stack.Arg1().NumericByRef().r8 > 1.0)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
    }

    // retrieve percentage as 0 to 10000 (0% to 100%)
    dutyCycle = (uint32_t)(stack.Arg1().NumericByRef().r8 * CONST_DutyCycleFactor);

    // Get channel number used for this pinNumber
    // FIXME check result
    channel = (ledc_channel_t)GetChannel(pinNumber, timerId, false);

    // Get speed mode based on Timer used
    speed_mode = GetSpeedMode(timerId);

    // Work out the duty Cycle for the current duty resolution
    dutyCycle = CalculateDuty(timerId, dutyCycle, polarity);

    // Update duty on channel
    IDF_ERROR(ledc_set_duty(speed_mode, channel, dutyCycle));

    // Activate duty on channel
    IDF_ERROR(ledc_update_duty(speed_mode, channel));

    // store the new duty cycle
    pThis[FIELD___dutyCycle].NumericByRef().u4 = dutyCycle;

    NANOCLR_NOCLEANUP();
}

HRESULT Library_sys_dev_pwm_native_System_Device_Pwm_PwmChannel::NativeStart___VOID(CLR_RT_StackFrame &stack)
{
    NANOCLR_HEADER();

    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Call configure to start PWM channel
    NANOCLR_CHECK_HRESULT(ConfigureAndStart(pThis, false, false));

    NANOCLR_NOCLEANUP();
}

HRESULT Library_sys_dev_pwm_native_System_Device_Pwm_PwmChannel::NativeStop___VOID(CLR_RT_StackFrame &stack)
{
    int32_t timerId;
    int32_t pinNumber;
    int32_t polarity;

    ledc_mode_t speed_mode;
    ledc_channel_t channel;

    NANOCLR_HEADER();

    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Retrieves the needed parameters from private class properties or method parameters
    timerId = pThis[FIELD___pwmTimer].NumericByRef().s4;
    pinNumber = pThis[FIELD___pinNumber].NumericByRef().s4;
    polarity = pThis[FIELD___polarity].NumericByRef().s4;

    speed_mode = GetSpeedMode(timerId);

    // FIX ME check result
    channel = (ledc_channel_t)GetChannel(pinNumber, timerId, false);

    ledc_stop(speed_mode, channel, (uint32_t)polarity);

    NANOCLR_NOCLEANUP();
}
